--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-is": "^19.2.3",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.6.0",
     "xlsx": "^0.18.5"
